# forge-agent-bounty

./: .gitignore  Anchor.toml  STORYBOARD.md  VIDEO_SCRIPT.md  demo-bounties.json
.github/workflows/: deploy.yml
agent-bounty/: Anchor.toml
agent-bounty/programs/agent-bounty/: Cargo.toml
agent-bounty/programs/agent-bounty/src/: lib.rs
agent-bounty/tests/: agent-bounty.ts
frontend/: .env.example  .gitignore  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/bounties/: page.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: BountyCard.tsx  CreateBountyForm.tsx  Footer.tsx  Header.tsx  StatusBadge.tsx  ThemeToggle.tsx
frontend/src/hooks/: useBounties.ts
frontend/src/lib/: config.ts  date-utils.ts  idl.json  program.ts
frontend/src/types/: bounty.ts
hackathon/: ui-mockup.md
hackathon/agent-bounty/: README.md
hackathon/agent-bounty-frontend/: package-lock.json  package.json  tailwind.config.ts
hackathon/agent-bounty-frontend/app/: layout.tsx  page.tsx
hackathon/agent-bounty-frontend/components/: BountyCard.tsx  Dashboard.tsx  Navbar.tsx  StatsCard.tsx  WalletProvider.tsx
hackathon/agent-bounty-sdk/: package.json
hackathon/agent-bounty-sdk/src/: cli.ts  index.ts
hackathon/agent-bounty-simple/: Cargo.toml
hackathon/agent-bounty-simple/src/: lib.rs
hackathon/agent-bounty-simple/tests/: mod.rs
programs/agent-bounty/: Cargo.toml
programs/agent-bounty/src/: lib.rs
tests/: agent-bounty.ts
(+12 files in other folders)
