[package]
name = "agent-bounty-simple"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.18"
borsh = "0.9"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []